neco-admission/base/upstream/manifests.yaml

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-projectcontour-io-httpproxy
  failurePolicy: Fail
  name: mhttpproxy.kb.io
  rules:
  - apiGroups:
    - projectcontour.io
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - httpproxies
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-pod
  failurePolicy: Fail
  name: mpod.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-argoproj-io-application
  failurePolicy: Fail
  name: vapplication.kb.io
  rules:
  - apiGroups:
    - argoproj.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - applications
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-delete
  failurePolicy: Fail
  name: vdelete.kb.io
  rules:
  - apiGroups:
    - apiextensions.k8s.io
    apiVersions:
    - v1
    - v1beta1
    operations:
    - DELETE
    resources:
    - customresourcedefinitions
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-integreatly-org-grafanadashboard
  failurePolicy: Fail
  name: vgrafanadashboard.kb.io
  rules:
  - apiGroups:
    - integreatly.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - grafanadashboards
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-projectcontour-io-httpproxy
  failurePolicy: Fail
  name: vhttpproxy.kb.io
  rules:
  - apiGroups:
    - projectcontour.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - httpproxies
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-projectcalico-org-networkpolicy
  failurePolicy: Fail
  name: vnetworkpolicy.kb.io
  rules:
  - apiGroups:
    - crd.projectcalico.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - networkpolicies
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-service
  failurePolicy: Fail
  name: vservice.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
